--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <form action='#' method='post' name='calculadora'>
             <!-- Pantalla de la calculadora (solo se interactúa con los botones)-->
             <!-- Se actualiza el valor en pantalla cada vez que se interactúa con alguno de los botones -->
-            <input id="pantalla" type="text" value='<?php echo $_SESSION['calculadora']->escribir()?>' readonly disabled/>
+            <input id="pantalla" type="text" value='' readonly disabled/>
         <label for="pantalla">sunset</label></form>
     </header>
 
